Fix address spacing

--- a/src/scss/single/_provider-post.scss
+++ b/src/scss/single/_provider-post.scss
@@ -43,7 +43,7 @@
         margin-bottom: 20px;
 
         &--sub {
-            margin-bottom: 3px;
+            margin-bottom: 3px !important;
         }
     }
 
